# Sante_mentale_et_grand_age

./: .gitignore  Makefile  README.md  charte_graphique.py  pyproject.toml  requirements.txt
code/: figure1a.py  figure1b.py  figure1c.py  figure1c1.py  figure1c2.py  figure1d.py  figure1e.py  figure2a.py  figure2b.py  figure2c.py  figure2d.py  figure2e1.py  figure2e2.py
datasets/: APL.csv  ER1340-Epicov_MEL.xlsx  MAJ_IND_ATLAS.xlsx  contacts_amis_famille.xlsx  enqueteVQS.ods  gestes_autoinfliges.csv  illectronisme_insee.xlsx  personnes_ages_seules.xlsx  population_age.xlsx
