[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sante_mentale_et_grand_age"
version = "0.0.1"
description = "Une analyse des disparit\u00e9s d\u2019acc\u00e8s aux soins psy - Projet Data Centrale"
authors = [
  { name = "Atlan Na\u00efs - Mourey Florian - Celestine Adam - Timoth\u00e9e Huang" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "black",
    "flake8",
    "ipython",
    "isort",
    "jupyterlab",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "scikit-learn",
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["sante_mentale_et_grand_age"]
force_sort_within_sections = true


